src/test/ui/macro-only/unsafe-foreign-mod.rs
// check-fail

unsafe extern "C++" { //~ERROR extern block cannot be declared unsafe
                      //~|ERROR invalid ABI
}

fn main() {}
